--- a/config/default.yml
+++ b/config/default.yml
@@ -13,5 +13,8 @@ AllCops:
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: consistent_comma
 
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: consistent_comma
+
 Style/TernaryParentheses:
   EnforcedStyle: require_parentheses_when_complex
