--- a/config/default.yml
+++ b/config/default.yml
@@ -18,3 +18,6 @@ Style/TrailingCommaInArrayLiteral:
 
 Style/TernaryParentheses:
   EnforcedStyle: require_parentheses_when_complex
+
+Style/SymbolArray:
+  EnforcedStyle: brackets
