--- a/config/default.yml
+++ b/config/default.yml
@@ -16,6 +16,9 @@ Style/TrailingCommaInArguments:
 Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: consistent_comma
 
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: consistent_comma
+
 Style/TernaryParentheses:
   EnforcedStyle: require_parentheses_when_complex
 
