Added Style/PercentLiteralDelimiters setting

--- a/config/default.yml
+++ b/config/default.yml
@@ -27,3 +27,8 @@ Style/SymbolArray:
 
 Style/RescueModifier:
   Enabled: false
+
+Style/PercentLiteralDelimiters:
+  PreferredDelimiters:
+    '%w': '()'
+    '%W': '()'
