Added Style/RaiseArgs setting

--- a/config/default.yml
+++ b/config/default.yml
@@ -32,3 +32,6 @@ Style/PercentLiteralDelimiters:
   PreferredDelimiters:
     '%w': '()'
     '%W': '()'
+
+Style/RaiseArgs:
+  EnforcedStyle: compact
