Add Layout/SpaceInsideBlockBraces setting

--- a/config/default.yml
+++ b/config/default.yml
@@ -41,3 +41,7 @@ Style/NestedTernaryOperator:
 
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
+
+Layout/SpaceInsideBlockBraces:
+  EnforcedStyle: no_space
+  SpaceBeforeBlockParameters: false
