Add Layout/MultilineMethodCallBraceLayout setting

--- a/config/default.yml
+++ b/config/default.yml
@@ -45,3 +45,6 @@ Layout/SpaceInsideHashLiteralBraces:
 Layout/SpaceInsideBlockBraces:
   EnforcedStyle: no_space
   SpaceBeforeBlockParameters: false
+
+Layout/MultilineMethodCallBraceLayout:
+  EnforcedStyle: new_line
