Disable Layout/HeredocIndentation cop

--- a/config/default.yml
+++ b/config/default.yml
@@ -51,3 +51,6 @@ Layout/MultilineMethodCallBraceLayout:
 
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented
+
+Layout/HeredocIndentation:
+  Enabled: false
