--- a/config/default.yml
+++ b/config/default.yml
@@ -44,7 +44,7 @@ Layout/SpaceInsideBlockBraces:
   SpaceBeforeBlockParameters: false
 
 Layout/MultilineMethodCallBraceLayout:
-  EnforcedStyle: new_line
+  EnforcedStyle: same_line
 
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented
