Add Layout/FirstArrayElementIndentation setting

--- a/config/default.yml
+++ b/config/default.yml
@@ -54,3 +54,6 @@ Layout/HeredocIndentation:
 
 Layout/FirstHashElementIndentation:
   EnforcedStyle: consistent
+
+Layout/FirstArrayElementIndentation:
+  EnforcedStyle: consistent
