Add Layout/FirstArgumentIndentation setting

--- a/config/default.yml
+++ b/config/default.yml
@@ -57,3 +57,6 @@ Layout/FirstHashElementIndentation:
 
 Layout/FirstArrayElementIndentation:
   EnforcedStyle: consistent
+
+Layout/FirstArgumentIndentation:
+  EnforcedStyle: consistent
