--- a/config/default.yml
+++ b/config/default.yml
@@ -60,3 +60,6 @@ Layout/FirstArrayElementIndentation:
 
 Layout/FirstArgumentIndentation:
   EnforcedStyle: consistent
+
+Layout/EndAlignment:
+  EnforcedStyleAlignWith: start_of_line
