--- a/config/default.yml
+++ b/config/default.yml
@@ -60,3 +60,11 @@ Layout/FirstArgumentIndentation:
 
 Layout/EndAlignment:
   EnforcedStyleAlignWith: start_of_line
+
+Bundler/OrderedGems:
+  Exclude:
+  - Gemfile
+
+Style/Documentation:
+  Enabled: false
+
