Add Lint/ConstantDefinitionInBlock setting

--- a/config/default.yml
+++ b/config/default.yml
@@ -70,3 +70,8 @@ Style/Documentation:
 
 Style/FormatStringToken:
   EnforcedStyle: template
+
+Lint/ConstantDefinitionInBlock:
+  Exclude:
+  - 'spec/**/*'
+  - 'lib/tasks/**/*'
